--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.0",
     "ngx-bootstrap": "^7.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.3",
+    "@angular-devkit/build-angular": "^12.2.13",
     "@angular/cli": "~12.2.3",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
